dataset1235/2025-2/1379599236/users/3062747507/executions/2936945225_2667036473.log
== SUBMISSION (2025-08-20 18:49:00)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_celcius + 273.15,2)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:47:03)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_kelvin + 273.15,2)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 19:10:22)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
  
      
      
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:48:53)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_celcius + 273.15,2)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15,2)
                                           ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:50:19)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_celcius + 273.15)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:56:37)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
 graus_kelvin = (graus_celcius + 273.15)
print(round (graus_kelvin, 2))
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 19:09:56)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
 graus_kelvin = (graus_celcius + 273.15)
print(round (graus_kelvin, 2))
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:50:24)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_celcius + 273.15)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:46:56)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_kelvin + 273.15,2)
print(round(graus_kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_kelvin + 273.15,2)
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:45:01)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_kelvin + 273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    graus_kelvin = graus_kelvin + 273.15
                   ^^^^^^^^^^^^
NameError: name 'graus_kelvin' is not defined. Did you mean: 'graus_celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:56:38)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
 graus_kelvin = (graus_celcius + 273.15)
print(round (graus_kelvin, 2))
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = (graus_celcius + 273.15)
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:51:10)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
graus_kelvin = graus_celcius + 273.15)
print(round(graus_kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    graus_kelvin = graus_celcius + 273.15)
                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:53:27)
-- CODE: 
graus_celcius = float(input("informe a temperatura:"))
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
informe a temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
informe a temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
informe a temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
informe a temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
informe a temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
informe a temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
